Optimize interactive reads with current financial aggregates and bounded team snapshots